--- a/streaming_playlist/templates/base.html
+++ b/streaming_playlist/templates/base.html
@@ -96,7 +96,7 @@
       {% endif %}
 
       {% block content %}
-        <p>Use this document as a way to quick start any new project.</p>
+        <p>Welcome to Streaming Playlist!.</p>
       {% endblock content %}
 
     </div> <!-- /container -->
