--- a/streaming_playlist/static/css/project.css
+++ b/streaming_playlist/static/css/project.css
@@ -1,13 +1,34 @@
 /* These styles are generated from project.scss. */
 
 .alert-debug {
-  color: black;
-  background-color: white;
-  border-color: #d6e9c6;
+    color: black;
+    background-color: white;
+    border-color: #d6e9c6;
 }
 
 .alert-error {
-  color: #b94a48;
-  background-color: #f2dede;
-  border-color: #eed3d7;
+    color: #b94a48;
+    background-color: #f2dede;
+    border-color: #eed3d7;
 }
+
+ul.trending {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    overflow-x: auto;
+    list-style: none;
+}
+
+ul.trending li {
+    flex: 0 0 auto;
+    width: 350px;
+    height: 200px;
+}
+ul.trending li img{
+    max-width: 100%;
+    max-height: 100%;
+}
+  
