--- a/streaming_playlist/templates/base.html
+++ b/streaming_playlist/templates/base.html
@@ -68,12 +68,20 @@
                         {% if request.user.is_authenticated %}
                         <li class="nav-item">
                             {# URL provided by django-allauth/account/urls.py #}
-                            <a class="nav-link" href="{% url 'users:detail' request.user.username  %}">{% translate "My
-                                Profile" %}</a>
+                            <a class="nav-link" href="{% url 'users:detail' request.user.username  %}">My Profile</a>
                         </li>
                         <li class="nav-item">
                             {# URL provided by django-allauth/account/urls.py #}
                             <a class="nav-link" href="{% url 'account_logout' %}">{% translate "Sign Out" %}</a>
+                        </li>
+                        <li class="nav-item">
+                            <form action="{% url 'search:search_content' %}">
+                                <input type="text" placeholder="Search" name="title">
+                                <button>
+                                    <i class="fa fa-search" style="font-size: 18px;">
+                                    </i>
+                                </button>
+                            </form>
                         </li>
                         {% else %}
                         {% if ACCOUNT_ALLOW_REGISTRATION %}
