--- a/streaming_playlist/templates/pages/movie_page.html
+++ b/streaming_playlist/templates/pages/movie_page.html
@@ -1,4 +1,158 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %} Streaming Playlist {% endblock %}
+{% block title %} {{ title }} | Streaming Playlist {% endblock %}
+
+{% block content %}
+<div class="page-single movie-single movie_single">
+    <div class="container">
+        <div class="row ipad-width2">
+            <div class="col-md-4 col-sm-12 col-xs-12">
+                <div class="movie-img sticky-sb">
+                    <img src="{{ poster }}" alt="">
+                    <div class="movie-btn">
+                        <div class="btn-transform transform-vertical red">
+                            <div><a href="{{ trailer }}" class="item item-1 redbtn" target="_blank"> <i
+                                        class="ion-play"></i> Watch
+                                    Trailer</a>
+                            </div>
+                        </div>
+                        <div class="btn-transform transform-vertical">
+                            <div><a href="#" class="item item-1 yellowbtn"> <i class="ion-card"></i> Stream at:</a>
+                            </div>
+                            {% if watch_providers %}
+                            {% for providers in watch_providers %}
+                            <div>
+                                <p>{{ providers.provider_name }}</p>
+                            </div>
+                            {% endfor %}
+                            {% else %}
+                            <div>
+                                <p>Not available to stream.</p>
+                            </div>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8 col-sm-12 col-xs-12">
+                <div class="movie-single-ct main-content">
+                    <h1 class="bd-hd">{{ title }} <span>{{ year }}</span></h1>
+                    <div class="social-btn">
+                        <a href="#" class="parent-btn"><i class="ion-heart"></i> Add to Favorite</a>
+                        <a href="#" class="parent-btn"><i class="ion-heart"></i> Add to Playlist</a>
+                    </div>
+                    <div class="movie-rate">
+                        <div class="rate">
+                            <i class="ion-android-star"></i>
+                            <p><span>{{ rating }}</span> /10<br>
+                                <span class="rv">{{ rating_user_count }} Ratings</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="movie-tabs">
+                        <div class="tabs">
+                            <ul class="tab-links tabs-mv">
+                                <li class="active"><a href="#overview">Overview</a></li>
+                                <li><a href="#moviesrelated"> Related Movies</a></li>
+                            </ul>
+                            <div class="tab-content">
+                                <div id="overview" class="tab active">
+                                    <div class="row">
+                                        <div class="col-md-8 col-sm-12 col-xs-12">
+                                            <p>{{ overview }}</p>
+                                            <div class="title-hd-sm">
+                                                <h4>cast</h4>
+                                                <a href="#" class="time">Full Cast & Crew <i
+                                                        class="ion-ios-arrow-right"></i></a>
+                                            </div>
+                                            <!-- movie cast -->
+                                            <div class="mvcast-item">
+                                                {% for actor in cast %}
+                                                <div class="cast-it">
+                                                    <div class="cast-left">
+                                                        <img src="{{ actor.photo }}" alt="">
+                                                        <a href="#">{{ actor.name }}</a>
+                                                    </div>
+                                                    <p>{{ actor.plays_character }}</p>
+                                                </div>
+                                                {% endfor %}
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4 col-xs-12 col-sm-12">
+                                            <div class="sb-it">
+                                                <h6>Director: </h6>
+                                                <p><a href="#">{{ director.name }}</a></p>
+                                            </div>
+                                            <div class="sb-it">
+                                                <h6>Writer: </h6>
+                                                <p>
+                                                    {% for writer in writers %}
+                                                    <a href="#">{{ writer.name }}, </a>
+                                                    {% endfor %}
+                                                </p>
+                                            </div>
+                                            <div class="sb-it">
+                                                <h6>Stars: </h6>
+                                                <p>
+                                                    {% for star in stars %}
+                                                    <a href="#">{{ star.name }}, </a>
+                                                    {% endfor %}
+                                                </p>
+                                            </div>
+                                            <div class="sb-it">
+                                                <h6>Genres:</h6>
+                                                <p>
+                                                    {% for genre in genres %}
+                                                    <a href="#">{{ genre.name }}, </a>
+                                                    {% endfor %}
+                                                </p>
+                                            </div>
+                                            <div class="sb-it">
+                                                <h6>Release Date:</h6>
+                                                <p>{{ release_date }}</p>
+                                            </div>
+                                            <div class="sb-it">
+                                                <h6>Run Time:</h6>
+                                                <p>{{ runtime }}</p>
+                                            </div>
+                                            <div class="sb-it">
+                                                <h6>Plot Keywords:</h6>
+                                                <p class="tags">
+                                                    {% for tag in keywords %}
+                                                    <span class="time"><a href="#">{{ tag }}</a></span>
+                                                    {% endfor %}
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div id="moviesrelated" class="tab">
+                                        <div class="row">
+                                            <h3>Related Movies To</h3>
+                                            <h2>{{ title }}</h2>
+                                            <div class="topbar-filter">
+                                                <p>Found <span>{{ related_movies | length }} movies</span> in total</p>
+                                            </div>
+                                            {% for movie in related_movies %}
+                                            <div class="movie-item-style-2">
+                                                <img src="{{ movie.poster }}" alt="">
+                                                <div class="mv-item-infor">
+                                                    <h6><a href="#">{{ movie.title }} <span>({{ movie.year }})</span></a></h6>
+                                                    <p class="rate"><i class="ion-android-star"></i><span>{{ movie.rating }}</span> /10
+                                                    </p>
+                                                </div>
+                                            </div>
+                                            {% endfor %}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    {% endblock content %}
