--- a/streaming_playlist/templates/base.html
+++ b/streaming_playlist/templates/base.html
@@ -29,12 +29,13 @@
     ================================================== -->
     {# Placed at the top of the document so pages load faster with defer #}
     {% block javascript %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- Bootstrap JS -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"
         integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Your stuff: Third-party javascript libraries go here -->
-
+    <script src="{% static 'js/jquery.bootstrap.modal.forms.min.js' %}"></script>
     <!-- place project specific Javascript in this file -->
     {% compress js %}
     <script defer src="{% static 'js/project.js' %}"></script>
@@ -64,6 +65,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'about' %}">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="log-in-link" class="nav-link" href="{% url 'playlist:list_playlist' %}">Playlists</a>
                         </li>
                         {% if request.user.is_authenticated %}
                         <li class="nav-item">
