--- a/streaming_playlist/templates/pages/episode_page.html
+++ b/streaming_playlist/templates/pages/episode_page.html
@@ -8,7 +8,7 @@
 <div class="page-single movie-single movie_single">
 	<div class="container">
 		<div class="row ipad-width2">
-			<div class="col-md-4 col-sm-12 col-xs-12">
+			<div class="col-md-2 col-sm-12 col-xs-12">
 				<div class="movie-img sticky-sb">
 					<img src="{{ poster }}" alt="">
 					<div class="movie-btn">
@@ -30,7 +30,7 @@
                     </div>
 				</div>
 			</div>
-			<div class="col-md-8 col-sm-12 col-xs-12">
+			<div class="col-md-10 col-sm-12 col-xs-12">
 				<div class="movie-single-ct main-content">
 					<h1 class="bd-hd">{{ title }} <span>{{ year }}</span></h1>
 					<div class="social-btn">
@@ -60,16 +60,16 @@
                                                         class="ion-ios-arrow-right"></i></a>
                                             </div>
                                             <!-- movie cast -->
-                                            <div class="mvcast-item">
-                                                {% for actor in cast %}
-                                                <div class="cast-it">
-                                                    <div class="cast-left">
-                                                        <img src="{{ actor.photo }}" alt="">
-                                                        <a href="#">{{ actor.name }}</a>
+                                            <div class="container-fluid py-2 overflow-auto">
+                                                <div class="d-flex flex-row flex-nowrap">
+                                                    {% for actor in cast %}
+                                                    <div class="card card-body" style="min-width: 20%; margin: 1%;">
+                                                        <img src="{{ actor.photo }}">
+                                                        <p class="card-text" style="text-align: center;"><b>{{ actor.name }}</b></p>
+                                                        <p class="card-text" style="text-align: center;">{{ actor.plays_character }}</p>
                                                     </div>
-                                                    <p>{{ actor.plays_character }}</p>
+                                                    {% endfor %}
                                                 </div>
-                                                {% endfor %}
                                             </div>
 						            	</div>
                                         <div class="col-md-4 col-xs-12 col-sm-12">
