--- a/streaming_playlist/templates/pages/season_page.html
+++ b/streaming_playlist/templates/pages/season_page.html
@@ -8,7 +8,7 @@
 <div class="page-single movie-single movie_single">
 	<div class="container">
 		<div class="row ipad-width2">
-			<div class="col-md-4 col-sm-12 col-xs-12">
+			<div class="col-md-2 col-sm-12 col-xs-12">
 				<div class="movie-img sticky-sb">
 					<img src="{{ poster }}" alt="">
 					<div class="movie-btn">
@@ -30,7 +30,7 @@
                     </div>
 				</div>
 			</div>
-			<div class="col-md-8 col-sm-12 col-xs-12">
+			<div class="col-md-10 col-sm-12 col-xs-12">
 				<div class="movie-single-ct main-content">
 					<h1 class="bd-hd">{{ title }} <span>{{ year }}</span></h1>
 					<div class="social-btn">
@@ -61,16 +61,16 @@
                                                         class="ion-ios-arrow-right"></i></a>
                                             </div>
                                             <!-- movie cast -->
-                                            <div class="mvcast-item">
-                                                {% for actor in cast %}
-                                                <div class="cast-it">
-                                                    <div class="cast-left">
-                                                        <img src="{{ actor.photo }}" alt="">
-                                                        <a href="#">{{ actor.name }}</a>
+                                            <div class="container-fluid py-2 overflow-auto">
+                                                <div class="d-flex flex-row flex-nowrap">
+                                                    {% for actor in cast %}
+                                                    <div class="card card-body" style="min-width: 20%; margin: 1%;">
+                                                        <img src="{{ actor.photo }}">
+                                                        <p class="card-text" style="text-align: center;"><b>{{ actor.name }}</b></p>
+                                                        <p class="card-text" style="text-align: center;">{{ actor.plays_character }}</p>
                                                     </div>
-                                                    <p>{{ actor.plays_character }}</p>
+                                                    {% endfor %}
                                                 </div>
-                                                {% endfor %}
                                             </div>
 						            	</div>
                                         <div class="col-md-4 col-xs-12 col-sm-12">
@@ -111,31 +111,38 @@
 						            </div>
                                     
 						        </div>
-
+                                
                                 <div id="episodes" class="tab">
-                                    <div class="row">
+                                    <br>
                                     <h4>Episodes</h4>
-                                    {% for episode in episodes %}
-                                        <div class="mvcast-item">											
-                                        <div class="cast-it">
-                                            <div class="cast-left series-it">
-                                                <img src="{{ episode.poster }}" alt="">
-                                                <div>
-                                                    <a href="{% url 'content:get_episode' tv_id=tv_id season_number=season_number episode_number=episode.number%}">{{ episode.number }} : {{ episode.name }} ({{ episode.air_date }})</a>
-                                                    <p>{{ episode.overview }}</p>
-                                                    <p>Runtime: {{ episode.runtime }} minutes</p>
-                                                    <p>Rating: {{ episode.rating }}/10 ({{ episode.rating_vote_count }} votes)</p>
-                                                </div>	
-                                            </div>											
-                                        </div>	
+                                    {% if episodes %}
+                                    <div class="container-fluid py-2 overflow-auto">
+                                        <div class="card flex-row flex-wrap">
+                                            {% for episode in episodes %}
+                                            <div class="card card-body" style="min-width: 20%; margin: 1%;">
+                                            
+                                                <div class="card-header border-0">
+                                                    <img src="{{ episode.poster }}" class="img-fluid" alt="" />
+                                                </div>
+                                                <div class="card-block px-2">
+                                                    <h4 class="card-title">{{ episode.number }} : {{ episode.name }} ({{ episode.air_date }})</h4>
+                                                    <p class="card-text">{{ episode.overview }}</p>
+                                                    <p class="card-text"><b>Rating: </b>{{ episode.rating }}/10 ({{ episode.rating_vote_count }} votes)</p>
+                                                    <p class="card-text"><b>Runtime: </b>{{ episode.runtime }} minutes</p>
+                                                </div>
+                                                <a href="{% url 'content:get_episode' tv_id=tv_id season_number=season_number episode_number=episode.number%}" class="stretched-link" style="z-index: 5;"></a>
+                                                <div class="w-100"></div>
+                                            </div>
+                                            {% endfor %}
+                                        </div>
                                     </div>
-                                    {% empty %}
+                                    
+                                    {% else %}
                                     <div>
-                                        <p>No seasons available</p>
+                                        <p>No episodes available</p>
                                     </div>
-                                    {% endfor %}
-                                    </div>
-                                </div>
+                                    {% endif %}
+					       	 	</div>
 						    </div>
 						</div>
 					</div>
